Refactor unit and integration tests
Signed-off-by: Chen Dai <daichen@amazon.com>